--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -1,3 +1,5 @@
+\TODO{Add labels to edges}
+
 \newcommand{\frpb}{{\mathsf{pb}}}
 %---------------------------------------
 \begin{definition}\label{definition:PathBreaker}
@@ -117,8 +119,6 @@ where the evidenced interaction and cut vertices belong to the same connected co
 \begin{theorem}\label{theorem:PathBreakerSound}
 Reduction $\to_\frpb$ is sound.
 \end{theorem}
-
-\TODO{Define `evidenced'.}
 
 \begin{proof}
 Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frpb\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\vref{definition:PathBreaker}.
