--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -204,14 +204,14 @@ The \emph{isolated subflow remover}, $\ISR$, is an operator whose arguments are 
 with atomic flow
 \[
 \atomicflow{
-(-8, 6)*{\afvjdm4{}{\boldsymbol\epsilon}};
+(-8, 6)*{\afvjdm4{\boldsymbol\epsilon}{}};
 ( 1, 8)*{\afaidmex{}{}{}{}{}{}{6}{4}};
 (-5, 0)*{\affr{8}{8}};
 (-1, 2)*{\aflabelleft{\phi}};
 ( 4, 0)*{\affr{6}{8}};
 ( 7, 2)*{\aflabelleft{\psi}};
 ( 1,-8)*{\afaiumex{}{}{}{}{}{}{6}{4}};
-(-8,-6)*{\afvjum4{}{\boldsymbol\iota}};
+(-8,-6)*{\afvjum4{\boldsymbol\iota}{}};
 }
 \quad,
 \]
