--- a/flows_and_derivations.tex
+++ b/flows_and_derivations.tex
@@ -2,6 +2,8 @@
 
 \section{Extracting Flows from Derivations}\label{section:ExtractingFlowsFromDerivations}
 
+\TODO{Define $a^\phi$.}
+
 \TODO{Note: removed "modulo isomorphism" since this is already taken care of in the definitions earlier on.}
 
 %---------------------------------------
