--- a/global_transformations/multiple_isolated_subflow.tex
+++ b/global_transformations/multiple_isolated_subflow.tex
@@ -309,9 +309,23 @@ We combine $\Phi_0$, $\dots$, $\Phi_N$, $\Gammasf_1$, $\dots$, $\Gammasf_N$ to g
 \]
 \end{proof}
 
+%-----------------------------------------------------
+\begin{lemma}\label{lemma:IsolatedSubflowsRemovalPaths}
+Given two atomic flows $\phi$ and $\psi$, such that $\phi\to_\frmis\psi$, and given an interaction (resp., cut) vertex $\nu$ in $\psi$, then there is an interaction (resp., cut) vertex $\nu'$ in $\phi$ such that, for some $0\le i\le N$, $\nu=f_i(\nu')$, and
+\begin{itemize}
+\item if there is a path from $\nu$ to $\bot$ (resp., $\top$) in $\psi$, then there is a path from $\nu'$ to $\bot$ (resp., $\top$) in $\phi$; and
+\item if there is a cut (resp., interaction) vertex $\hat\nu$ in $\psi$, such that there is a path from $\nu$ to $\hat\nu$ in $\psi$, then there is a cut (resp., interaction) vertex $\hat\nu'$ in $\phi$, such that, for some $0\le i\le N$, $\hat\nu=f_i(\hat\nu')$ and there is a path from $\nu'$ to $\hat\nu'$ in $\phi$.
+\end{itemize}
+\end{lemma}
+
+\begin{proof}
+By a case analysis on the atomic flows in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}.
+\end{proof}
+
+%--------------------------------
 \newcommand{\MISR}{\mathsf{MISR}}
-\begin{definition}
-For every $n\ge1$, given an $N\ge0$, formulae $\gamma_{i,k}$ and derivations $\Gammasf_k$ as described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{multiple isolated subflow remover}, $\MISR_n$, is an operator whose arguments are distinct and mutually non-dual atoms $a_1$, $\dots$, $a_n$, and a derivation of shape
+\begin{definition}\label{definition:MultipleIsolatedSubflowsRemover}
+For every $n\ge0$, given the atoms, formulae and derivations described in Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, the \emph{multiple isolated subflow remover}, $\MISR_n$, is an operator whose arguments are distinct and mutually non-dual atoms $a_1$, $\dots$, $a_n$ (that, without loss of generality, we assume coincide with the atoms given in Definition~\ref{definition:MultipleIsolatedSubflowsRemoval}), and a derivation $\Phi$ that is on simple form with respect to $a_1$, $\dots$, $a_n$, such that
 \[
 \Phi\;=\;
 \vlder{\Phi'}{}
