--- a/global_transformations/threshold_formulae.tex
+++ b/global_transformations/threshold_formulae.tex
@@ -736,7 +736,7 @@ Consider $n>0$, distinct atoms $a_1$, \dots, $a_n$. For $k\ge0$, we define the d
 
 %-------------------------------------------------------------------------------
 \begin{theorem}\label{theorem:ThresholdDerivations}
-For any $n>0$ and $k\ge0$, the derivation\/ $\vlsmash{\Gth k{}n\avec1n}$ has shape
+For any $n>0$ and $k\ge0$, the derivation\/ $\vlsmash{\Gammasf^n_k\avec1n}$ has shape
 \[
 \vlder{}{\SKS\setminus\{\aid,\aiu\}}
 {
@@ -747,8 +747,9 @@ For any $n>0$ and $k\ge0$, the derivation\/ $\vlsmash{\Gth k{}n\avec1n}$ has sha
 }
 \quad,
 \]
-and\/ $\size{\Gth k{}n\avec1n}$ is $n^{\Ord{\log n}}$.
+and\/ $\size{\Gammasf^n_k\avec1n}$ is $n^{\Ord{\log n}}$.
 \end{theorem}
+%------------
 
 
 \newcommand{\frqmis}{{\mathsf{qmis}}}
